# MNOP-Enterprise

./: .env.example  .gitattributes  .gitignore  AGENTS.md  Email_Template_Enterprise.html  MNOP-Step-03-Backend-Foundation.ps1  MNOP-Step-10-Database-Foundation.ps1  MNOP-Step-10-Identity-RBAC-Models.ps1  MNOP-Step-10-Organization-Site-Models.ps1  compose.yaml
backend/: .dockerignore  Dockerfile  README.md  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 20260719_0001_baseline.py  20260719_0002_create_organizations_and_sites.py  20260719_0003_create_identity_and_rbac.py  20260721_0004_create_device_inventory.py  20260721_0005_create_network_monitoring.py
backend/app/: main.py
backend/app/api/: deps.py
backend/app/api/v1/: router.py
backend/app/api/v1/endpoints/: alerts.py  auth.py  devices.py  fortigate.py  health.py  monitoring.py  reports.py  topology.py  websocket.py
backend/app/core/: config.py  logging.py  security.py
backend/app/infrastructure/cache/: client.py
backend/app/infrastructure/database/: __init__.py  base.py  mixins.py  naming_convention.py  session.py  types.py
backend/app/infrastructure/database/models/: role.py  (+17 more)
backend/app/infrastructure/monitoring/: fortigate.py
backend/app/schemas/: auth.py  device.py  health.py  monitoring.py  topology.py
backend/app/workers/: ping_worker.py
backend/tests/: test_auth_and_devices_api.py  test_database_foundation.py  test_device_inventory_models.py  test_health.py  test_identity_rbac_models.py  test_network_monitoring_models.py  test_organization_site_models.py
(+50 files in other folders)
