[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[project]
name = "mnop-backend"
version = "0.1.0"
description = "Backend API Monitoring Network Operations Platform"
readme = "README.md"
requires-python = ">=3.13,<3.14"
dependencies = [
    "fastapi>=0.124,<1.0",
    "uvicorn[standard]>=0.34,<1.0",
    "pydantic>=2.12,<3.0",
    "pydantic-settings>=2.10,<3.0",
    "sqlalchemy[asyncio]>=2.0,<3.0",
    "asyncpg>=0.30,<1.0",
    "alembic>=1.18,<2.0",
    "redis>=6.0,<8.0",
    "pyjwt>=2.8,<3.0",
    "passlib[bcrypt]>=1.7,<2.0",
    "fpdf2>=2.8,<3.0",
]

[project.optional-dependencies]
dev = [
    "httpx>=0.28,<1.0",
    "pytest>=8.3,<10.0",
    "pytest-asyncio>=0.25,<2.0",
    "ruff>=0.11,<1.0",
    "mypy>=1.15,<2.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
addopts = "-ra -q"

[tool.ruff]
target-version = "py313"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.13"
strict = true
warn_unused_configs = true
plugins = ["pydantic.mypy"]
